--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test_Chrome</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">20,798</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test_Chrome</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">47,554</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test_Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">testcase.LoginTests</td><td><a href="#m0">Invalid_LoginTest</a></td><td rowspan="1">1702915763935</td><td rowspan="1">662</td></tr><tr class="passedeven"><td><a href="#m1">Invalid_Password_Test</a></td><td rowspan="1">1702915761411</td><td rowspan="1">446</td></tr><tr class="passedeven"><td><a href="#m2">Invalid_Username_Test</a></td><td rowspan="1">1702915758632</td><td rowspan="1">494</td></tr><tr class="passedeven"><td><a href="#m3">Valid_LoginTest</a></td><td rowspan="1">1702915750618</td><td rowspan="1">5720</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test_Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">testcase.EmployeeTest</td><td><a href="#m0">employee_blank_details</a></td><td rowspan="1">1702999863047</td><td rowspan="1">5940</td></tr><tr class="passedeven"><td><a href="#m1">employee_details</a></td><td rowspan="1">1702999871901</td><td rowspan="1">10736</td></tr><tr class="passedeven"><td><a href="#m2">employee_skipped_employeeId</a></td><td rowspan="1">1702999840043</td><td rowspan="1">6804</td></tr><tr class="passedeven"><td><a href="#m3">employee_skipped_lastname</a></td><td rowspan="1">1702999852227</td><td rowspan="1">8221</td></tr></tbody>
 </table>
-<h2>Test_Chrome</h2><h3 id="m0">testcase.LoginTests#Invalid_LoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testcase.LoginTests#Invalid_Password_Test</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">testcase.LoginTests#Invalid_Username_Test</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">testcase.LoginTests#Valid_LoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test_Chrome</h2><h3 id="m0">testcase.EmployeeTest#employee_blank_details</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testcase.EmployeeTest#employee_details</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testcase.EmployeeTest#employee_skipped_employeeId</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">testcase.EmployeeTest#employee_skipped_lastname</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
