--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,22 +104,22 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testcase.LoginTests" class="method navigator-link" hash-for-method="Invalid_LoginTest">Invalid_LoginTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testcase.EmployeeTest" class="method navigator-link" hash-for-method="employee_blank_details">employee_blank_details</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testcase.LoginTests" class="method navigator-link" hash-for-method="Invalid_Password_Test">Invalid_Password_Test</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testcase.EmployeeTest" class="method navigator-link" hash-for-method="employee_details">employee_details</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testcase.LoginTests" class="method navigator-link" hash-for-method="Invalid_Username_Test">Invalid_Username_Test</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testcase.EmployeeTest" class="method navigator-link" hash-for-method="employee_skipped_employeeId">employee_skipped_employeeId</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testcase.LoginTests" class="method navigator-link" hash-for-method="Valid_LoginTest">Valid_LoginTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testcase.EmployeeTest" class="method navigator-link" hash-for-method="employee_skipped_lastname">employee_skipped_lastname</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -137,35 +137,35 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testcase.LoginTests</span>
+              <span class="class-name">testcase.EmployeeTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Invalid_LoginTest">
-                  </a> <!-- Invalid_LoginTest -->
-                  <span class="method-name">Invalid_LoginTest</span>
+                  <a name="employee_blank_details">
+                  </a> <!-- employee_blank_details -->
+                  <span class="method-name">employee_blank_details</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="Invalid_Password_Test">
-                  </a> <!-- Invalid_Password_Test -->
-                  <span class="method-name">Invalid_Password_Test</span>
+                  <a name="employee_details">
+                  </a> <!-- employee_details -->
+                  <span class="method-name">employee_details</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="Invalid_Username_Test">
-                  </a> <!-- Invalid_Username_Test -->
-                  <span class="method-name">Invalid_Username_Test</span>
+                  <a name="employee_skipped_employeeId">
+                  </a> <!-- employee_skipped_employeeId -->
+                  <span class="method-name">employee_skipped_employeeId</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="Valid_LoginTest">
-                  </a> <!-- Valid_LoginTest -->
-                  <span class="method-name">Valid_LoginTest</span>
+                  <a name="employee_skipped_lastname">
+                  </a> <!-- employee_skipped_lastname -->
+                  <span class="method-name">employee_skipped_lastname</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -187,7 +187,7 @@
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;parameter name=&quot;url&quot; value=&quot;https://hrm.qabible.in/hrms/admin&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testcase.LoginTests&quot;/&gt;
+      &lt;class name=&quot;testcase.EmployeeTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test_Chrome --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -229,26 +229,26 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Valid_LoginTest')
-data.setCell(0, 2, 'testcase.LoginTests')
-data.setCell(0, 3, 5720);
+data.setCell(0, 1, 'employee_details')
+data.setCell(0, 2, 'testcase.EmployeeTest')
+data.setCell(0, 3, 10736);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Invalid_LoginTest')
-data.setCell(1, 2, 'testcase.LoginTests')
-data.setCell(1, 3, 662);
+data.setCell(1, 1, 'employee_skipped_lastname')
+data.setCell(1, 2, 'testcase.EmployeeTest')
+data.setCell(1, 3, 8221);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'Invalid_Username_Test')
-data.setCell(2, 2, 'testcase.LoginTests')
-data.setCell(2, 3, 494);
+data.setCell(2, 1, 'employee_skipped_employeeId')
+data.setCell(2, 2, 'testcase.EmployeeTest')
+data.setCell(2, 3, 6804);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'Invalid_Password_Test')
-data.setCell(3, 2, 'testcase.LoginTests')
-data.setCell(3, 3, 446);
+data.setCell(3, 1, 'employee_blank_details')
+data.setCell(3, 2, 'testcase.EmployeeTest')
+data.setCell(3, 3, 5940);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 31 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -274,54 +274,54 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testcase.LoginTests</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testcase.EmployeeTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp(chrome, https://hrm.qabible.in/hrms/admin)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">Valid_LoginTest</span>
-                <span class="method-start">6531 ms</span>
+                <span class="method-name">employee_skipped_employeeId</span>
+                <span class="method-start">4562 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">takeScreenshotOnFailure([TestResult name=Valid_LoginTest status=SUCCESS method=LoginTests.Valid_LoginTest()[pri:1, instance:...)</span>
-                <span class="method-start">12259 ms</span>
+                <span class="method-name">takeScreenshotOnFailure([TestResult name=employee_skipped_employeeId status=SUCCESS method=EmployeeTest.employee_skipped_emp...)</span>
+                <span class="method-start">11377 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp(chrome, https://hrm.qabible.in/hrms/admin)</span>
-                <span class="method-start">12511 ms</span>
+                <span class="method-start">11980 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">Invalid_Username_Test</span>
-                <span class="method-start">14545 ms</span>
+                <span class="method-name">employee_skipped_lastname</span>
+                <span class="method-start">16746 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">takeScreenshotOnFailure([TestResult name=Invalid_Username_Test status=SUCCESS method=LoginTests.Invalid_Username_Test()[pri:...)</span>
-                <span class="method-start">15041 ms</span>
+                <span class="method-name">takeScreenshotOnFailure([TestResult name=employee_skipped_lastname status=SUCCESS method=EmployeeTest.employee_skipped_lastn...)</span>
+                <span class="method-start">24968 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp(chrome, https://hrm.qabible.in/hrms/admin)</span>
-                <span class="method-start">15228 ms</span>
+                <span class="method-start">25387 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">Invalid_Password_Test</span>
-                <span class="method-start">17324 ms</span>
+                <span class="method-name">employee_blank_details</span>
+                <span class="method-start">27566 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">takeScreenshotOnFailure([TestResult name=Invalid_Password_Test status=SUCCESS method=LoginTests.Invalid_Password_Test()[pri:...)</span>
-                <span class="method-start">17774 ms</span>
+                <span class="method-name">takeScreenshotOnFailure([TestResult name=employee_blank_details status=SUCCESS method=EmployeeTest.employee_blank_details()[...)</span>
+                <span class="method-start">33507 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp(chrome, https://hrm.qabible.in/hrms/admin)</span>
-                <span class="method-start">17993 ms</span>
+                <span class="method-start">33837 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">Invalid_LoginTest</span>
-                <span class="method-start">19848 ms</span>
+                <span class="method-name">employee_details</span>
+                <span class="method-start">36420 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">takeScreenshotOnFailure([TestResult name=Invalid_LoginTest status=SUCCESS method=LoginTests.Invalid_LoginTest()[pri:4, insta...)</span>
-                <span class="method-start">20512 ms</span>
+                <span class="method-name">takeScreenshotOnFailure([TestResult name=employee_details status=SUCCESS method=EmployeeTest.employee_details()[pri:4, insta...)</span>
+                <span class="method-start">47162 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
