--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,26 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testcase.LoginTests</td>
+<td>testcase.EmployeeTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Invalid_Username_Test</td>
+<td>employee_skipped_lastname</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Valid_LoginTest</td>
+<td>employee_skipped_employeeId</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Invalid_Password_Test</td>
+<td>employee_details</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Invalid_LoginTest</td>
+<td>employee_blank_details</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
