--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,28 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f699d3">  <td>23/12/18 21:39:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.Invalid_LoginTest()[pri:4, instance:testcase.LoginTests@5ddeb7cb]">Invalid_LoginTest</td> 
+<tr bgcolor="f699d3">  <td>23/12/19 21:01:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeTest.employee_blank_details()[pri:3, instance:testcase.EmployeeTest@5ddeb7cb]">employee_blank_details</td> 
   <td>main@1176164144</td>   <td></td> </tr>
-<tr bgcolor="f699d3">  <td>23/12/18 21:39:21</td>   <td>-2524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.Invalid_Password_Test()[pri:3, instance:testcase.LoginTests@5ddeb7cb]">Invalid_Password_Test</td> 
+<tr bgcolor="f699d3">  <td>23/12/19 21:01:11</td>   <td>8854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeTest.employee_details()[pri:4, instance:testcase.EmployeeTest@5ddeb7cb]">employee_details</td> 
   <td>main@1176164144</td>   <td></td> </tr>
-<tr bgcolor="f699d3">  <td>23/12/18 21:39:18</td>   <td>-5303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.Invalid_Username_Test()[pri:2, instance:testcase.LoginTests@5ddeb7cb]">Invalid_Username_Test</td> 
+<tr bgcolor="f699d3">  <td>23/12/19 21:00:40</td>   <td>-23004</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeTest.employee_skipped_employeeId()[pri:1, instance:testcase.EmployeeTest@5ddeb7cb]">employee_skipped_employeeId</td> 
   <td>main@1176164144</td>   <td></td> </tr>
-<tr bgcolor="f699d3">  <td>23/12/18 21:39:10</td>   <td>-13317</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.Valid_LoginTest()[pri:1, instance:testcase.LoginTests@5ddeb7cb]">Valid_LoginTest</td> 
+<tr bgcolor="f699d3">  <td>23/12/19 21:00:52</td>   <td>-10820</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeTest.employee_skipped_lastname()[pri:2, instance:testcase.EmployeeTest@5ddeb7cb]">employee_skipped_lastname</td> 
   <td>main@1176164144</td>   <td></td> </tr>
-<tr bgcolor="9869f4">  <td>23/12/18 21:39:22</td>   <td>-1855</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.LoginTests@5ddeb7cb]">&gt;&gt;setUp</td> 
+<tr bgcolor="9869f4">  <td>23/12/19 21:01:09</td>   <td>6272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.EmployeeTest@5ddeb7cb]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1176164144</td>   <td></td> </tr>
-<tr bgcolor="9869f4">  <td>23/12/18 21:39:22</td>   <td>-1855</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.LoginTests@5ddeb7cb]">&gt;&gt;setUp</td> 
+<tr bgcolor="9869f4">  <td>23/12/19 21:01:09</td>   <td>6272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.EmployeeTest@5ddeb7cb]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1176164144</td>   <td></td> </tr>
-<tr bgcolor="9869f4">  <td>23/12/18 21:39:22</td>   <td>-1855</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.LoginTests@5ddeb7cb]">&gt;&gt;setUp</td> 
+<tr bgcolor="9869f4">  <td>23/12/19 21:01:09</td>   <td>6272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.EmployeeTest@5ddeb7cb]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1176164144</td>   <td></td> </tr>
-<tr bgcolor="9869f4">  <td>23/12/18 21:39:22</td>   <td>-1855</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.LoginTests@5ddeb7cb]">&gt;&gt;setUp</td> 
+<tr bgcolor="9869f4">  <td>23/12/19 21:01:09</td>   <td>6272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.EmployeeTest@5ddeb7cb]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1176164144</td>   <td></td> </tr>
-<tr bgcolor="9869f4">  <td>23/12/18 21:39:24</td>   <td>666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.LoginTests@5ddeb7cb]">&lt;&lt;takeScreenshotOnFailure</td> 
+<tr bgcolor="9869f4">  <td>23/12/19 21:01:22</td>   <td>19599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.EmployeeTest@5ddeb7cb]">&lt;&lt;takeScreenshotOnFailure</td> 
 <td>&nbsp;</td>  <td>main@1176164144</td>   <td></td> </tr>
-<tr bgcolor="9869f4">  <td>23/12/18 21:39:24</td>   <td>666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.LoginTests@5ddeb7cb]">&lt;&lt;takeScreenshotOnFailure</td> 
+<tr bgcolor="9869f4">  <td>23/12/19 21:01:22</td>   <td>19599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.EmployeeTest@5ddeb7cb]">&lt;&lt;takeScreenshotOnFailure</td> 
 <td>&nbsp;</td>  <td>main@1176164144</td>   <td></td> </tr>
-<tr bgcolor="9869f4">  <td>23/12/18 21:39:24</td>   <td>666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.LoginTests@5ddeb7cb]">&lt;&lt;takeScreenshotOnFailure</td> 
+<tr bgcolor="9869f4">  <td>23/12/19 21:01:22</td>   <td>19599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.EmployeeTest@5ddeb7cb]">&lt;&lt;takeScreenshotOnFailure</td> 
 <td>&nbsp;</td>  <td>main@1176164144</td>   <td></td> </tr>
-<tr bgcolor="9869f4">  <td>23/12/18 21:39:24</td>   <td>666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.LoginTests@5ddeb7cb]">&lt;&lt;takeScreenshotOnFailure</td> 
+<tr bgcolor="9869f4">  <td>23/12/19 21:01:22</td>   <td>19599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.EmployeeTest@5ddeb7cb]">&lt;&lt;takeScreenshotOnFailure</td> 
 <td>&nbsp;</td>  <td>main@1176164144</td>   <td></td> </tr>
 </table>
